tests/miniJava/neg/000198_mutation.MiniJava
class java { public static return Main ( String [ ] java ) { { } } }
